# AIPro-Resume

./: .gitignore  .silan_last_sync.json  README.md  api_debug_tool.js  eslint.config.js  jsconfig.json  package-lock.json  package.json  portfolio.db  tailwind.config.js  test.html  tsconfig.json  vite.config.ts
api-test-portfolio/: .silan_last_sync.json  portfolio.db  silan.yaml
api-test-portfolio/.silan/: backend_config.json  last_sync.json
api_backend/: all_apis.thrift  build-linux.bat  build-win.bat  go.mod  go.sum  main.go
api_backend/client/: client.go
api_backend/middleware/: http_gateway.go
api_backend/services/: all_apis_impl.go  database.go  index.go  mock_data.go
backend/: test_api.py
backend/file-system/: .silan_db_cache.json  .silan_last_sync.json  ARCHITECTURE.md  INTEGRATION_GUIDE.md  MANIFEST.in  environment.yml  portfolio.db  pyproject.toml  requirements.txt  setup_environment.sh
backend/file-system/debug/: debug_content_discovery.py  debug_database_issues.py  debug_projects.py  debug_resume.py  debug_sync_process.py  reproduce_sync_issue.py  test_database_fixed.py
backend/file-system/silan/: __init__.py  cli.py  silan.py  workspace_manager.py
backend/file-system/silan/cli/: help.py  init.py
backend/file-system/silan/commands/: backend_manager.py  database_sync_advanced.py  db_config_manager.py  init.py  project_manager.py  template_manager.py  update_manager.py  workspace_manager.py
backend/file-system/silan/core/: base_command.py  interfaces.py
backend/file-system/silan/logic/: content_logic.py  database_config_logic.py  database_sync_logic.py  help_logic.py
backend/file-system/silan/models/: __init__.py  blog.py  experience.py  ideas.py  projects.py  recent_update.py  research.py  user.py
backend/file-system/silan/parsers/: __init__.py  blog_parser.py  idea_parser.py  project_parser.py  resume_parser.py  test_parser_system.py  update_parser.py
backend/file-system/silan/services/: __init__.py
backend/file-system/silan/utils/: cli_interface.py  config.py  logger.py  validation.py
backend/file-system/silan_database_tools.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
backend/file-system/silan_personal_website.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
backend/go-server/: backend.go  go.mod  go.sum
backend/hybrid-database-system/: docker-compose.yml
backend/simple-file-system/: Dockerfile  README.md  pyproject.toml  sync_requirements.txt
content/blog/: test-series-part2.md  test-vlog.md
content/ideas/: quantum-ml-framework.md
content/projects/: ai-resume-builder.md
content/resume/: personal-info.md
content/updates/: 2024-project-milestone.md
docs/: ai-agent-guide.md  ai-implementation-templates.md  db-design.md  hybrid-system-architecture.md  mysql-database-design.md  python-go-tech-stack.md  simple-system-design.md
frontend/: .gitignore  .silan_last_sync.json  index.html  package-lock.json  portfolio.db  tailwind.config.js  test_api.sh  test_updated_apis.js
public/: index.html
src/: App.css  App.js  App.tsx  ResumeWebsite.js  WebsiteGuideBar.js  i18n.js  index.css  index.tsx
src/api/: config.ts  getAIResponse.js  getAIResponse.ts  getRecentGoal.js  getRecentGoal.ts  getRecentMessages.js  getRecentMessages.ts  index.ts  newsApi.js  newsApi.ts  planApi.js  (+8 more)
(+811 files in other folders)
